# tinaTabil

./: .anjuta_sym_db.db  .gitignore  AUTHORS  Makefile  Makefile.in  README  aclocal.m4  config.h  config.status  configure  configure.ac
.anjuta/session/: anjuta.session  dock-layout.xml
autom4te.cache/: output.0  requests  traces.0  traces.1
po/: Makefile  Makefile.in  POTFILES
src/: Makefile  Makefile.am  Makefile.in  app.tinaContabil.python2.db  tinatabil.py  tinatabil.py~  tinatabil.ui
